--- a/src/app/components/directives/stats/hand/goals.html
+++ b/src/app/components/directives/stats/hand/goals.html
@@ -1,5 +1,5 @@
 <div class="card white-text" ng-if="bindToId==='goalScored'">
-    <div class="card-title colorMain center">
+    <div class="card-title dark-primary-color center">
         <span class="white-text title"><small>{{'stats.resumeTab.goalScored' | translate }}</small></span>
     </div>
     <!-- 
@@ -7,7 +7,7 @@
         <img src="/assets/images/handball/ballon-filet.jpeg">
     </div>
     -->
-    <div class="card-content white blue-grey-text text-darken-2">
+    <div class="card-content white blue-grey-text primary-text-color">
         <div class="row center">
             <div class="col s4"><h6>{{'stats.resumeTab.goal' | translate }}</h6></div>
             <div class="col s4"><h6>{{'stats.resumeTab.goalAvgLight' | translate }}</h6></div>
@@ -21,7 +21,7 @@
 </div>
 
 <div class="card white-text" ng-if="bindToId==='goalConceded'">
-    <div class="card-title colorMain center">
+    <div class="card-title dark-primary-color center">
         <span class="white-text title"><small>{{'stats.resumeTab.goalConceded' | translate }}</small></span>
     </div>
     <!--
@@ -30,7 +30,7 @@
     </div>
     -->
     
-    <div class="card-content white blue-grey-text text-darken-2">
+    <div class="card-content white primary-text-color">
         <div class="row center">
             <div class="col s4"><h6>{{'stats.resumeTab.goal' | translate }}</h6></div>
             <div class="col s4"><h6>{{'stats.resumeTab.goalAvgLight' | translate }}</h6></div>
