--- a/src/app/components/directives/stats/hand/sanction.html
+++ b/src/app/components/directives/stats/hand/sanction.html
@@ -1,5 +1,5 @@
-<div class="card white-text">
-    <div class="card-title colorMain center">
+<div class="card white">
+    <div class="card-title dark-primary-color center">
         <span class="white-text title"><small>{{'stats.resumeTab.sanctions' | translate }}</small></span>
     </div>
     
@@ -9,7 +9,7 @@
     </div>
     -->
 
-    <div class="card-content white blue-grey-text text-darken-2">
+    <div class="card-content white primary-text-color">
         <div class="row center">
             <div class="col s4"><h6>{{'stats.sanction.yellowCard' | translate }}</h6></div>
             <div class="col s4"><h6>{{'stats.sanction.excluTempo' | translate }}</h6></div>
