--- a/src/app/components/directives/widgets/agenda/agenda.html
+++ b/src/app/components/directives/widgets/agenda/agenda.html
@@ -1,5 +1,5 @@
-<div class="card colorAccent white-text">
-    <div class="card-content colorMain white-text">
+<div class="card accent-color">
+    <div class="card-content dark-primary-color">
         <span class="card-title"><i class="fa fa-calendar"></i> {{'mainAgenda.next_event'  | translate}}</span>
     </div>
     <div class="card-content" style="overflow-y: auto; height:255px;">
