--- a/src/app/components/directives/widgets/stats/efficiency/efficiencyPlayer.html
+++ b/src/app/components/directives/widgets/stats/efficiency/efficiencyPlayer.html
@@ -1,5 +1,5 @@
-<div class="card white blue-grey-text text-darken-2">
-    <div class="card-content colorMain white-text">
+<div class="card primary-text-color">
+    <div class="card-content dark-primary-color">
         <span class=""><i class="fa fa-futbol-o"></i> {{widgetTitle | translate}}</span>
     </div>
     <div class="card-content" style="height:200px;">
