--- a/src/app/modules/public/aboutUs.html
+++ b/src/app/modules/public/aboutUs.html
@@ -1,41 +1,35 @@
-<div id="index-banner" class="colorMain-text">
-    <div class="section no-pad-bot hero-signup">
-        <div class="colorBckgModal white-text center-align">
-            <h1 class="title hide-on-small-only" translate="landing.contact.about"></h1>
-            
-            <h2 class="title hide-on-med-and-up" translate="landing.contact.about"></h2>
+<div class="primary-text-color">
+    <div class="row default-primary-color aboutUs">
+        <div class="col s12 center-align"> 
+            <h2 translate="landing.contact.about"></h2>
         </div>
-    </div>
-
-    <div class="row">&nbsp;</div>
-        
-    <div class="container">
-        <div class="row">
+        <div class="col s12">&nbsp;</div>
+        <div class="col s12">
 
             <div class="col s12 m4">
-                <div class="card white colorMain-text">
-                    <div class="card-image waves-effect waves-block waves-light center-align">
-                        <img class="activator card-image"   src="../../../assets/images/Christophe.jpg">
+                <div class="card light-primary-color">
+                    <div class="waves-effect waves-block waves-light center-align">
+                        <img class="activator circle responsive-img" src="../../../assets/images/Christophe.jpg">
                         <span class="card-title center-align"><h3>Christophe</h3></span>
                     </div>
-                    <div class="card-content colorAccent white-text center-align">
+                    <div class="card-content accent-color center-align">
                         <h5>Le préparateur physique</h5>
                         <h6>Bon les gars, aujourd'hui on y vas cool...</h6>
                     </div>
                     <div class="card-reveal">
-                      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                      <span class="card-title">Card Title<i class="material-icons right">close</i></span>
                       <p>Here is some more information about this product that is only revealed once clicked on.</p>
                     </div>
                 </div>
             </div>
-            
+
             <div class="col s12 m4">
-                <div class="card white colorMain-text">
-                    <div class="card-image waves-effect waves-block waves-light center-align">
-                        <img class="activator card-image"   src="../../../assets/images/Pascal.JPG">
+                <div class="card light-primary-color">
+                    <div class="waves-effect waves-block waves-light center-align">
+                        <img class="activator circle responsive-img" src="../../../assets/images/Pascal.JPG">
                         <span class="card-title center-align"><h3>Pascal</h3></span>
                     </div>
-                    <div class="card-content colorSecondary white-text center-align">
+                    <div class="card-content accent-color center-align">
                         <h5>Le coach</h5>
                         <h6>les gars, mise au vert ce week end...</h6>
                     </div>
@@ -45,48 +39,14 @@
                     </div>
                 </div>
             </div>
-
-            <div class="col s12 m4">
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light center-align">
-                        <img class="activator card-image"  src="../../../assets/images/Xavier.png">
-                        <span class="card-title center-align"><h3>Xavier</h3></span>
-                    </div>
-                    <div class="card-content white colorSecondary-text center-align">
-                        <h5>L'analyste technique</h5>
-                        <h6>Il est à 100% au tir quand y'a pas de gardien...</h6>
-                    </div>
-                    <div class="card-reveal">
-                      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                      <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                    </div>
-                </div>
-            </div>
             
             <div class="col s12 m4">
-                <div class="card white colorMain-text">
-                    <div class="card-image waves-effect waves-block waves-light center-align">
-                        <img class="activator card-image"   src="../../../assets/images/404-bg.jpg">
-                        <span class="card-title center-align"><h3>Florent</h3></span>
-                    </div>
-                    <div class="card-content colorSecondary white-text center-align">
-                        <h5>Le tacticien</h5>
-                        <h6>L'enclenchement A23 dans les 5 dernières minutes...</h6>
-                    </div>
-                    <div class="card-reveal">
-                      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                      <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                    </div>
-                </div>
-            </div>
-            
-             <div class="col s12 m4">
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light center-align">
-                        <img class="activator card-image"   src="../../../assets/images/mathieu.jpg">
+                <div class="card light-primary-color">
+                    <div class="waves-effect waves-block waves-light center-align">
+                        <img class="activator circle responsive-img" src="../../../assets/images/mathieu.jpg">
                         <span class="card-title center-align"><h3>Mathieu</h3></span>
                     </div>
-                    <div class="card-content white colorAccent-text center-align">
+                    <div class="card-content accent-color center-align">
                         <h5>Le chargé de presse</h5>
                         <h6>Pas de commentaires, question suivante...</h6>
                     </div>
@@ -96,14 +56,50 @@
                     </div>
                 </div>
             </div>
-            
+
             <div class="col s12 m4">
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light center-align">
-                        <img class="activator card-image"   src="../../../assets/images/Jerome%20-%20copie.jpg">
+                <div class="card light-primary-color">
+                    <div class="waves-effect waves-block waves-light center-align">
+                        <img class="activator circle responsive-img" src="../../../assets/images/Xavier.jpg">
+                        <span class="card-title center-align"><h3>Xavier</h3></span>
+                    </div>
+                    <div class="card-content accent-color center-align">
+                        <h5>L'analyste technique</h5>
+                        <h6>Il est à 100% au tir quand y'a pas de gardien...</h6>
+                    </div>
+                    <div class="card-reveal">
+                      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col s12 m4">
+                <div class="card light-primary-color">
+                    <div class="waves-effect waves-block waves-light center-align">
+                        <img class="activator circle responsive-img" src="../../../assets/images/404-bg.jpg">
+                        <span class="card-title center-align"><h3>Florent</h3></span>
+                    </div>
+                    <div class="card-content accent-color center-align">
+                        <h5>Le tacticien</h5>
+                        <h6>L'enclenchement A23 dans les 5 dernières minutes...</h6>
+                    </div>
+                    <div class="card-reveal">
+                      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                    </div>
+                </div>
+            </div>
+
+             
+
+            <div class="col s12 m4">
+                <div class="card light-primary-color">
+                    <div class="waves-effect waves-block waves-light center-align">
+                        <img class="activator circle responsive-img" src="../../../assets/images/Jerome%20-%20copie.jpg">
                         <span class="card-title center-align"><h3>Jérôme</h3></span>
                     </div>
-                    <div class="card-content colorAccent white-text center-align">
+                    <div class="card-content accent-color center-align">
                         <h5>Le préparateur mental</h5>
                         <h6>Allez les gars, on leur marche sur la tête...</h6>
                     </div>
@@ -113,8 +109,7 @@
                     </div>
                 </div>
             </div>
-            
+
         </div>
     </div>
-    
 </div>
