--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -1,34 +1,35 @@
-<div id="index-banner" class="colorMain-text white">
-    <div class="section no-pad-bot hero white-text center-align">
-        
-            <h2 translate="landing.main-title"></h2>
-            <h3  class=" hide-on-small-only ">&nbsp;</h3>
-            <h3 class=" hide-on-small-only ">
-                <span translate="landing.sub-title" ></span>
-            </h3>
-            <h3>&nbsp;</h3>
-            <a class="btn waves-effect waves-white colorAccent" 
-               ng-click="openSignup()" translate="navbar.signup"></a>
-            <h3>&nbsp;</h3>
 
+<div class="light-primary-color">    
+    <div class="row default-primary-color landing">
+        
+            <div class="col s12"><h2 translate="landing.main-title"></h2></div>
+            
+            <div class="col s12"> 
+                <a class="btn waves-effect waves-white accent-color" ng-click="openSignup()" translate="navbar.signup"></a>
+            </div>
+            
+            <div class="col s12 hide-on-med-and-down"><h2>&nbsp;</h2></div>
+        
+            <div class="col m4 s12 hide-on-med-and-down">
+                <i class="material-icons md-60 accent-text-color">camera_alt</i>
+                <h5 translate="landing.part-2.capture"></h5>
+            </div>
+            <div class="col m4 s12 hide-on-med-and-down">
+                <i class="material-icons md-60 accent-text-color">insert_chart</i>
+                <h5 translate="landing.part-2.analyze"></h5>
+            </div>
+            <div class="col m4 s12 hide-on-med-and-down">
+                <i class="material-icons md-60 accent-text-color">show_chart</i>
+                <h5 translate="landing.part-2.progress"></h5>
+            </div>
     </div>
     
-    <div class=" colorBckgModal">
-        <div class="section">
-            <h3>&nbsp;</h3>
-            <h2 class="center-align colorAccent-text" translate="landing.area-2.title"></h2>
-            <h3>&nbsp;</h3>
-            <h5 class="center-align hide-on-small-only" translate="landing.area-2.content"></h5>
-        </div>
-    </div>
-
-    <div class=" colorMain-text">
-        <h3>&nbsp;</h3>
-        <div class="row container">
+    <div class="row landing-part-two">        
+        <div class="col s12 primary-text-color"><h3 translate="landing.part-2.title"></h3></div>
 
             <div class="col s12 m6">
                 <div class="center">
-                    <div class="colorAccent-text">
+                    <div class="accent-text-color">
                         <i class="large material-icons">store</i>
                     </div>
                     <h5 translate="landing.area-3.item-2.title" class="title"></h5>
@@ -45,13 +46,10 @@
                 </div>
             </div>
             
-        </div>
-        <div class="row">&nbsp;</div>
-        
-        <div class="row container">
+
             <div class="col s12 m6">
                 <div class="center">
-                    <div class="colorAccent-text">
+                    <div class="accent-text-color">
                         <i class="large material-icons">stay_current_landscape</i>
                     </div>
 
@@ -63,7 +61,7 @@
 
             <div class="col s12 m6">
                 <div class="center">
-                    <div class="colorAccent-text">
+                    <div class="accent-text-color">
                         <i class="large material-icons">loop</i>
                     </div>
                     <h5 translate="landing.area-3.item-3.title" class="title"></h5>
@@ -71,11 +69,11 @@
                     <p class="light left-align container" translate="landing.area-3.item-3.content"></p>
                 </div>
             </div>
-        </div>
+
     </div>
     <div class="row">&nbsp;</div>
     
-    <div class="colorSecondary">
+    <div class="default-primary-color">
         <div class="section white-text">
             <div class="row">&nbsp;</div>
 
