--- a/src/app/modules/public/pricing.html
+++ b/src/app/modules/public/pricing.html
@@ -1,56 +1,103 @@
 <!-- START PRICING TABLE CONTAINER -->
-<div class="colorMain-text">
-    <div class="section no-pad-bot hero-pricing white-text center-align">
-        <h2 class="title" translate="pricing.title"></h2>
-        <h5 class="title hide-on-small-only" translate="pricing.desc"></h5>
-    </div>
-</div>
+<div class="light-primary-color">
+    <div class="row default-primary-color landing" style="margin-bottom:0px;">
+        <div class="col s12  center-align">
+            <h2 class="title" translate="pricing.title"></h2>
+            <h5 class="title hide-on-small-only" translate="pricing.desc"></h5>
+        </div>
 
-<div class="colorMain-text center-align">
-                <div class="card-title colorAccent-text">
-                    <h3 translate="pricing.offers.standard.title"></h3>
-                </div>
-                <div class="card-content colorBckgModal colorMain-text">
-                    <div class="price center-align">
-                        <h3>{{'pricing.offers.standard.price' | translate}} € {{'pricing.offers.standard.period' | translate}}</h3>
+        <div class="col s12">&nbsp;</div>
+        <div class="col s12 landing-part-two">
+            <div class="row"> 
+                <div class="col l4 s12">
+                    <div class="card-title primary-text-color">
+                        <h3 translate="pricing.offers.standard.title"></h3>
                     </div>
+                    <div class="card-content light-primary-color">
+                        <div class="price center-align">
+                            <h4>{{'pricing.offers.standard.price' | translate}} € {{'pricing.offers.standard.period' | translate}}</h4>
+                        </div>
 
-                    <h6>
-                    <a class="btn btn-flat btn-large waves-effect waves-light colorAccent white-text"
-                       href="#/signupStart" translate="pricing.subscribe-btn">
-                    </a>
-                    </h6>
+                        <a class="btn waves-effect waves-light accent-color"
+                           href="#/signupStart" translate="pricing.subscribe-btn">
+                        </a>
 
-                    <div class="divider white container"></div>
-                    <h5 translate="pricing.offers.standard.detail.title"></h5>
+                        <ul class="left-align" style="padding-left: 10%;">
+                            <li translate="pricing.offers.standard.detail.line1"></li>
+                            <li translate="pricing.offers.standard.detail.line2"></li>
+                            <li translate="pricing.offers.standard.detail.line3"></li>
+                            <li translate="pricing.offers.standard.detail.line4"></li>
+                            <li translate="pricing.offers.standard.detail.line5"></li>
+                        </ul>
+                        
+                        <p>&nbsp;</p>
+                    </div>
+                </div>
+                <div class="col l4 s12">
+                    <div class="card-title primary-text-color">
+                        <h3 translate="pricing.offers.standard.title"></h3>
+                    </div>
+                    <div class="card-content light-primary-color">
+                        <div class="price center-align">
+                            <h4>{{'pricing.offers.standard.price' | translate}} € {{'pricing.offers.standard.period' | translate}}</h4>
+                        </div>
 
-                    <ul class="left-align" style="padding-left: 30%;">
-                        <li translate="pricing.offers.standard.detail.line1"></li>
-                        <li translate="pricing.offers.standard.detail.line2"></li>
-                        <li translate="pricing.offers.standard.detail.line3"></li>
-                        <li translate="pricing.offers.standard.detail.line4"></li>
-                        <li translate="pricing.offers.standard.detail.line5"></li>
-                    </ul>
+                        <a class="btn waves-effect waves-light accent-color"
+                           href="#/signupStart" translate="pricing.subscribe-btn">
+                        </a>
 
+                        <ul class="left-align" style="padding-left: 10%;">
+                            <li translate="pricing.offers.standard.detail.line1"></li>
+                            <li translate="pricing.offers.standard.detail.line2"></li>
+                            <li translate="pricing.offers.standard.detail.line3"></li>
+                            <li translate="pricing.offers.standard.detail.line4"></li>
+                            <li translate="pricing.offers.standard.detail.line5"></li>
+                        </ul>
+                        <p>&nbsp;</p>
+                    </div>
+                </div>
+                <div class="col l4 s12">
+                    <div class="card-title primary-text-color">
+                        <h3 translate="pricing.offers.standard.title"></h3>
+                    </div>
+                    <div class="card-content light-primary-color">
+                        <div class="price center-align">
+                            <h4>{{'pricing.offers.standard.price' | translate}} € {{'pricing.offers.standard.period' | translate}}</h4>
+                        </div>
+
+                        <a class="btn waves-effect waves-light accent-color"
+                           href="#/signupStart" translate="pricing.subscribe-btn">
+                        </a>
+
+                        <ul class="left-align" style="padding-left: 10%;">
+                            <li translate="pricing.offers.standard.detail.line1"></li>
+                            <li translate="pricing.offers.standard.detail.line2"></li>
+                            <li translate="pricing.offers.standard.detail.line3"></li>
+                            <li translate="pricing.offers.standard.detail.line4"></li>
+                            <li translate="pricing.offers.standard.detail.line5"></li>
+                        </ul>
+                        <p>&nbsp;</p>
+                    </div>
+                </div>
+            </div>
+            <p class="center-align primary-text-color" translate="pricing.team-subscribe"></p>
+        </div>
+    </div>
+
+    <div class="row  default-primary-color" style="margin-bottom:0px;">
+        <div class="center-align">
+            <div class="row">
+                <div class="col m6 s12 right-align">
+                    <h5 translate="pricing.trial.title"></h5>
+                </div>
+                <div class="col m6 s12 ">
+                        <a class="btn waves-effect waves-light light-primary-color"
+                           href="#/signupStart" translate="pricing.trial.btn"></a>
 
                 </div>
-            
-    <p class="center-align colorMain-text" translate="pricing.team-subscribe"></p>
-</div>
-
-<div class="pricing colorSecondary white-text">
-    <div class="container center-align">
-        <div class="row">
-            <div class="col m6 s12">
-                <h5 translate="pricing.trial.title"></h5>
+                <div class="col s12">&nbsp;</div>
             </div>
-            <div class="col m6 s12 ">
-                <div class="center-align">
-                    <a class="btn btn-flat btn-large waves-effect waves-light white colorAccent-text subscribe"
-                       href="#/signupStart" translate="pricing.trial.btn"></a>
-                </div>
-            </div>
-            <div class="col s12">&nbsp;</div>
         </div>
     </div>
 </div>
+
