--- a/src/app/components/directives/stats/hand/detailModal.html
+++ b/src/app/components/directives/stats/hand/detailModal.html
@@ -1,4 +1,4 @@
-<button class="btn waves-effect waves-light colorAccent modal-trigger" title="{{'stats.buttons.timeline' | translate}}"
+<button class="btn waves-effect waves-light accent-color-color   modal-trigger" title="{{'stats.buttons.timeline' | translate}}"
         ng-click="openDetail(uid)">
     <i class="material-icons">timeline</i>
 </button>
@@ -6,7 +6,7 @@
 <div id="modal-{{uid}}" class="modal graph-modal">
     <div class="modal-content compare-modale">
         <form name="myForm">
-            <div class="row colorMain white-text">
+            <div class="row dark-primary-color valign-wrapper">
                 <div class="input-field col m2 s4">
                     <label for="currentIndicator" translate="stats.label.indicator"></label>
                 </div>
@@ -19,11 +19,9 @@
                     <br>
                 </div>
                 <div class="input-field col m6 s12"><h4 ng-bind="title" class="flow-text"></h4></div>
-                <div>
-                    <filter-calendar periodicity="periodicity" periodicity-active="periodicityActive"
-                                     popup="true" meta="meta"></filter-calendar>
-                </div>
+                
             </div>
+            <filter-calendar periodicity="periodicity" periodicity-active="periodicityActive" meta="meta"></filter-calendar>
             <div class="row" ng-if="loading">
                 <div class="col s12">
                     <div class="preloader-wrapper big active">
