--- a/src/app/components/directives/stats/hand/efficiency.html
+++ b/src/app/components/directives/stats/hand/efficiency.html
@@ -1,6 +1,6 @@
 <!-- efficiency gauge -->
 <div class="card white" ng-if="bindtoid==='gaugeEfficiencyGlobal'">
-    <div class="card-title colorMain center">
+    <div class="card-title dark-primary-color center">
             <span class="white-text title"><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></span>
     </div>
 
@@ -18,8 +18,8 @@
     <div class="card-content white center-align red-text text-lighten-2" ng-hide="noStat">{{'stats.resumeTab.noData' | translate }}</div>
 </div>
 
-<div class="card blue-grey darken-2" ng-if="bindtoid==='gaugeEfficiency9m'">
-    <div class="card-title colorMain center">
+<div class="card white" ng-if="bindtoid==='gaugeEfficiency9m'">
+    <div class="card-title dark-primary-color center">
             <span class="white-text title"><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></span>
     </div>
 
@@ -37,8 +37,8 @@
     <div class="card-content white center-align red-text text-lighten-2" ng-hide="noStat">{{'stats.resumeTab.noData' | translate }}</div>
 </div>
 
-<div class="card blue-grey darken-2" ng-if="bindtoid==='gaugeEfficiency6m'">
-    <div class="card-title colorMain center">
+<div class="card white" ng-if="bindtoid==='gaugeEfficiency6m'">
+    <div class="card-title dark-primary-color center">
             <span class="white-text title"><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></span>
     </div>
 
@@ -56,8 +56,8 @@
     <div class="card-content white center-align red-text text-lighten-2" ng-hide="noStat">{{'stats.resumeTab.noData' | translate }}</div>
 </div>
 
-<div class="card blue-grey darken-2" ng-if="bindtoid==='gaugeEfficiency7m'">
-    <div class="card-title colorMain center">
+<div class="card white" ng-if="bindtoid==='gaugeEfficiency7m'">
+    <div class="card-title dark-primary-color center">
             <span class="white-text title"><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></span>
     </div>
 
