--- a/src/app/components/directives/stats/hand/radarChart.html
+++ b/src/app/components/directives/stats/hand/radarChart.html
@@ -1,5 +1,5 @@
-<div class="card blue-grey darken-2">
-    <div class="card-title colorMain activator center white-text title">
+<div class="card white">
+    <div class="card-title dark-primary-color activator center">
         <small>{{title}}<i class="small material-icons right">more_vert</i></small>
     </div>
     <div class="card-content white center-align">
@@ -30,7 +30,7 @@
         </div>
     </div>
     <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4"><small>{{title}}<i
+        <span class="card-title light-primary-color"><small>{{title}}<i
                 class="material-icons right">close</i></small></span>
         <table>
             <thead>
