--- a/src/app/components/directives/widgets/podium/podium.html
+++ b/src/app/components/directives/widgets/podium/podium.html
@@ -1,7 +1,7 @@
 
 
-<div class="card white blue-grey-text text-darken-2">
-    <div class="card-content colorMain white-text">
+<div class="card primary-text-color">
+    <div class="card-content dark-primary-color">
         <span class="activator card-title" ng-if="indicator==='goalScored'"> 
             <i class="fa fa-futbol-o left"></i>
             {{'dashboard.widgetTopScored.title' | translate}} 
@@ -39,9 +39,10 @@
                                            background-size: 80% 100%;
                                            background-position: center;">
                     <br>
-                    <simple-avatar person="players[0]" link="('#/private/viewPlayer/' + players[0]._id)" width="'80px'"></simple-avatar>
+                    <simple-avatar person="players[0]" link="('#/private/viewPlayer/' + players[0]._id)" width="'80px'" class="hide-on-small-only"></simple-avatar>
                     <br> {{players[0].firstname}}
                     <br> 
+                    <h5 class="hide-on-med-and-up">&nbsp;</h5>
                     <h4 class="white-text" ng-if="indicator==='playTime'">{{players[0].value/60 | number : 0}} '</h4>
                     <h4 class="white-text" ng-if="indicator==='goalScored'">{{players[0].value}} </h4>
                 </div>
@@ -50,10 +51,11 @@
                                            background-size: 80% 100%;
                                            background-position: center;">
                     <br>
-                    <simple-avatar person="players[1]" link="('#/private/viewPlayer/' + players[1]._id)" width="'80px'"></simple-avatar> 
+                    <simple-avatar person="players[1]" link="('#/private/viewPlayer/' + players[1]._id)" width="'80px'" class="hide-on-small-only"></simple-avatar> 
                     <br> {{players[1].firstname}}
-                    <br> 
-                     <h4 class="white-text" ng-if="indicator==='playTime'">{{players[1].value/60 | number : 0}} '</h4>
+                    <br>
+                    <h5 class="hide-on-med-and-up">&nbsp;</h5>
+                    <h4 class="white-text" ng-if="indicator==='playTime'">{{players[1].value/60 | number : 0}} '</h4>
                     <h4 class="white-text" ng-if="indicator==='goalScored'">{{players[1].value}}</h4>
                 </div>
 
@@ -62,9 +64,10 @@
                                            background-size: 80% 100%;
                                            background-position: center;">
                     <br>
-                    <simple-avatar person="players[2]" link="('#/private/viewPlayer/' + players[2]._id)" width="'80px'"></simple-avatar>
+                    <simple-avatar person="players[2]" link="('#/private/viewPlayer/' + players[2]._id)" width="'80px'" class="hide-on-small-only"></simple-avatar>
                     <br> {{players[2].firstname}}
                     <br> 
+                    <h5 class="hide-on-med-and-up">&nbsp;</h5>
                     <h4 class="white-text" ng-if="indicator==='playTime'">{{players[2].value/60 | number : 0}} '</h4>
                     <h4 class="white-text" ng-if="indicator==='goalScored'">{{players[2].value}}</h4>
                 </div>
