--- a/src/app/index.css
+++ b/src/app/index.css
@@ -25,41 +25,97 @@
     font-size: 48px;
 }
 
-.colorMain-text {
-    color: #646464 !important;
+.material-icons.md-60 {
+    font-size: 60px;
 }
 
-.colorAccent-text {
+/* Theme Color : deep-purple/red */
+
+.dark-primary-color    { 
+    background: #37474F !important;
+    color: #FFFFFF;
+}
+.default-primary-color { 
+    background: #78BE78;
+    color: #FFFFFF;
+}
+.light-primary-color   { 
+    background-color: rgba(242, 243, 242, 1) !important;
+    color: #646464 !important;
+}
+.accent-color          { 
+    background: #ea5350 !important;
+    color: #FFFFFF;
+}
+.secondary-color          { 
+    background: rgba(120, 190, 120, 1) !important;
+    color: #FFFFFF;
+}
+.primary-text-color    { 
+    color: rgba(69, 90, 100, 1);
+}
+.secondary-text-color  { 
+    color: #BDBDBD !important;; 
+}
+.accent-text-color         { 
     color: #ea5350 !important;
 }
-
-.colorSecondary-text {
-    color: #78BE78 !important;
+.divider-color         { 
+    border-color: #BDBDBD !important;
 }
 
-.colorMain {
-    background: rgba(100, 100, 100, 1);
-    overflow: hidden;
+/* Public site */
+
+.top-nav-trans {
+    position: relative;
+    z-index: 30;
+    background: #37474F;
+    box-shadow: none;
 }
 
-.colorSecondary {
-    background: linear-gradient(10deg, rgba(120, 190, 120, 1), rgba(120, 190, 120, 1));
-    /*  overflow: hidden; */
+.landing {
+    background: url("../assets/images/handball/Home2.jpg") center 60%;
+    max-height: 100vh;
+    width: 100%;
+    height: 600px;
+    padding: 10vh 10vw 10vh 10vw;
+    text-align: center;
+    position: relative;
 }
 
-.colorAccent {
-    background: linear-gradient(10deg, rgba(239, 83, 80, 1), rgba(239, 83, 80, 1));
-    overflow: hidden;
+.landing-part-two {
+    text-align: center;
+    position: relative;
+    box-sizing: border-box;
+    border-radius: 8px;
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16), 0 3px 6px 0 rgba(0, 0, 0, 0.23);
+    padding: 3vh 7vw 3vh 7vw;
+    width: 90vw;
+    background-color: #ffffff;
 }
 
-.colorBckgModal {
-    background-color: rgba(242, 243, 242, 1);
-    overflow: hidden;
+.landing div{
+    margin-bottom: 20px;
 }
 
-.cardBckg {
-    background: #9e9e9e;
-    color: #646464 !important;
+.aboutUs {
+    background: url("../assets/images/handball/Back01.jpg") center 80%;
+    max-height: 100vh;
+    width: 100%;
+    height: 400px;
+    padding: 10vh 10vw 10vh 10vw;
+    text-align: center;
+    position: relative;
+}
+
+/* Override Materializecss */
+
+.card {
+    border-radius: 8px;
+}
+
+.card .card-content, .card .card-title {
+    border-radius: 8px 8px 0px 0px;
 }
 
 .btn, .btn-large, .btn-flat {
@@ -67,6 +123,15 @@
     height: 40px;
     padding: 2px;
     max-width: 200px;
+    border-radius: 4px;
+}
+
+.btn3 {
+    width: 32%;
+    height: 25px;
+    padding: 2px;
+    max-width: 200px;
+    border-radius: 4px;
 }
 
 input:not([type]):focus:not([readonly]) + label,
@@ -82,7 +147,7 @@ input[type=tel]:focus:not([readonly]) + label,
 input[type=number]:focus:not([readonly]) + label,
 input[type=search]:focus:not([readonly]) + label,
 textarea.materialize-textarea:focus:not([readonly]) + label {
-    color: rgba(120, 190, 120, 1);
+    color: #ef9a9a !important;
 }
 
 .switch label input[type=checkbox]:checked + .lever {
@@ -106,8 +171,8 @@ input[type=tel]:focus:not([readonly]),
 input[type=number]:focus:not([readonly]),
 input[type=search]:focus:not([readonly]),
 textarea.materialize-textarea:focus:not([readonly]) {
-    border-bottom: 1px solid #78BE78;
-    box-shadow: 0 1px 0 0 #78BE78;
+    border-bottom: 1px solid #ef9a9a;
+    box-shadow: 0 1px 0 0 #ef9a9a;
 }
 
 input[type=text].valid, input[type=text]:focus.valid, input[type=password].valid, input[type=password]:focus.valid, input[type=email].valid, input[type=email]:focus.valid, input[type=url].valid,
@@ -115,6 +180,15 @@ input[type=url]:focus.valid, input[type=time].valid, input[type=time]:focus.vali
 input[type=tel].valid, input[type=tel]:focus.valid, input[type=number].valid, input[type=number]:focus.valid, input[type=search].valid, input[type=search]:focus.valid, textarea.materialize-textarea.valid, textarea.materialize-textarea:focus.valid {
     border-bottom: 1px solid #546e7a;
     box-shadow: 0 0 0 0 #546e7a;
+}
+
+input {
+    padding-left: 5px !important;
+    padding-right: -5px !important;
+}
+input.has-error {
+    border-bottom-color: #ea5350 !important;
+    color: #ea5350;
 }
 
 [type="radio"].with-gap:checked + label:after {
@@ -138,7 +212,7 @@ input[type=text], input[type=password], input[type=email], input[type=url], inpu
 
 .dropdown-content li > a, .dropdown-content li > span {
     font-size: 16px;
-    color: #78BE78;
+    color: #ef9a9a;
     display: block;
     line-height: 22px;
     padding: 14px 16px;
@@ -177,115 +251,9 @@ span.badge {
     position: relative;
 }
 
-p {
-    line-height: 2rem;
-}
-
-.container {
-    width: 90%;
-}
-
-.button-collapse {
-    color: #26a69a;
-}
-
-.parallax-container {
-    min-height: 380px;
-    line-height: 0;
-    height: auto;
-    color: rgba(255, 255, 255, .9);
-}
-
-.parallax-container .section {
-    width: 100%;
-}
-
-.icon-block {
-    padding: 0 15px;
-}
 
 footer.page-footer {
     margin: 0;
-}
-
-.lost {
-    background: url("../assets/images/404-bg.jpg") center 0%;
-    background-size: cover;
-    width: 100%;
-    margin-top: -65px;
-    padding-top: 10%;
-    min-height: 100vh !important;
-    height: 100%;
-}
-
-.lost-overlay {
-    background-color: #000000;
-    width: 100%;
-    min-height: 100vh !important;
-    z-index: 1;
-    position: absolute;
-    top: 0;
-    opacity: 0.5;
-}
-
-.hero {
-    background: url("../assets/images/handball/Home2.jpg") center 40%;
-}
-
-.heroPartOne {
-    background: url("../assets/images/handball/Home1.png") center 50%;
-}
-
-.hero-signup {
-    background: url("../assets/images/backHome.jpg") center 40%;
-}
-
-.hero-signup-end {
-    background: url("../assets/images/handball/Back01.jpg");
-}
-
-.hero {
-    background-size: cover;
-    width: 100%;
-    padding-top: 2%;
-    min-height: calc(75vh - 100px);
-    height: 100%;
-}
-
-.heroPartOne, .hero-signup, .hero-signup-end {
-    background-size: cover;
-    width: 90%;
-    padding-top: 1%;
-    min-height: calc(30vh);
-    height: 90%;
-}
-
-.hero-overlay {
-    background-color: #000000;
-    width: 100%;
-    min-height: calc(40vh - 194px);
-    z-index: 1;
-    position: absolute;
-    top: 0;
-    opacity: 0.5;
-}
-
-.hero-overlay + .container, .lost-overlay + .container {
-    position: relative;
-    padding-top: 5px;
-    z-index: 10;
-}
-
-.hero a.btn, .lost a.btn {
-    background-color: rgba(158, 158, 158, 0.5);
-    color: #fff;
-}
-
-.top-nav-trans {
-    position: relative;
-    z-index: 30;
-    background-color: rgba(100, 100, 100, 1);
-    box-shadow: none;
 }
 
 .visible-nav {
@@ -301,6 +269,8 @@ footer.page-footer {
     opacity: 0;
 }
 
+
+/* Toast */ 
 .toast-message {
     line-height: normal;
     font-size: 1em;
@@ -312,65 +282,6 @@ footer.page-footer {
     height: auto;
 }
 
-.justify {
-    text-align: justify;
-}
-
-.small {
-    font-size: small;
-    line-height: 2em;
-}
-
-.how {
-    background-color: #B4C8BD;
-    color: #fff;
-    max-width: 100%;
-    margin-top: -300px !important;
-    padding-top: 300px;
-    width: 100%;
-    margin-bottom: -30px;
-    padding-bottom: 30px;
-
-}
-
-.how .container {
-    width: 90%;
-}
-
-.how h5 {
-    min-height: 50px;
-}
-
-.pad-10 {
-    padding-left: 50px !important;
-    padding-right: 50px !important;
-}
-
-@media only screen and (max-width: 992px) {
-
-    #index-banner .section {
-        top: 0;
-    }
-
-    .describe .col {
-        min-height: 200px;
-    }
-
-    .container {
-        width: 90%;
-    }
-}
-
-@media only screen and (max-width: 600px) {
-
-    #index-banner .section {
-        top: 0;
-    }
-
-    .container {
-        width: 80%;
-    }
-}
 
 /* Custom style for angular-file-uploader */
 .my-drop-zone {
@@ -519,20 +430,13 @@ table.super-fancy tr.foobar {
     }
 }
 
-/** Responsive buttons on small screen */
-@media screen and (max-width: 400px) {
-    .btn-s {
-        padding: 0 10px;
-    }
-}
-
 /*** Customisation du bouton de feedback */
 .feedback-btn-gray {
     color: #fff;
     font-family: "Roboto", sans-serif;
     font-weight: normal;
     font-size: larger;
-    background: #43A047 none;
+    background: #78BE78 none;
     left: 60px;
     right: auto;
 }
@@ -1082,12 +986,4 @@ table.super-fancy tr.foobar {
 
 .cnil-main p {
     text-align: justify;
-}
-input {
-    padding-left: 5px !important;
-    padding-right: -5px !important;
-}
-input.has-error {
-    border-bottom-color: #ea5350 !important;
-    color: #ea5350;
 }
