--- a/src/app/modules/home/mainHome.html
+++ b/src/app/modules/home/mainHome.html
@@ -1,6 +1,9 @@
 <div class="container">
 <!-- body start-->
-    <div class="row"></div>
+    <div class="row"><div class="col s12">&nbsp;</div></div>
+    
+    <filter-calendar periodicity="periodicity" periodicity-active="periodicityActive" meta="meta"></filter-calendar>
+       
     
     <div class="row">
         <div class="col s12 l5">
