--- a/src/app/modules/sandbox/effective/team/writeTeam.html
+++ b/src/app/modules/sandbox/effective/team/writeTeam.html
@@ -5,7 +5,7 @@
     <!-- Entete -->
     <div class="row">
         <div class="col s12">
-            <div class="row colorMain white-text center-align">
+            <div class="row dark-primary-color center-align">
                 <div ng-hide="addTeamTitle">
                     <div class="col s1">    
                         <h5><i class="fa fa-pencil-square-o"></i></h5>
@@ -106,11 +106,11 @@
             <!-- actions buttons -->
             <div class="row">
                 <div class="col s12 center-align">
-                    <a class="waves-effect waves-white btn btn-s colorAccent" ng-click="doTheBack()" translate="commons.buttons.cancel"></a>
+                    <a class="waves-effect waves-white btn dark-primary-color" ng-click="doTheBack()" translate="commons.buttons.cancel"></a>
                     <button type="submit" ng-click="writeTeam()" translate="commons.buttons.validate" 
                             ng-disabled="teamForm.$invalid" tabindex="8"
                             ng-class="{'btn waves-effect waves-white disabled': teamForm.$invalid, 
-                                       'btn btn-s waves-effect waves-white colorSecondary': !teamForm.$invalid}">
+                                       'btn waves-effect waves-white accent-color': !teamForm.$invalid}">
                     </button>
                 </div>
             </div>
